header section added

--- a/index.html
+++ b/index.html
@@ -4,17 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Linking CSS -->
+    <!-- linking cSS -->
     <link rel="stylesheet" href="./styles.css">
-    <!-- Linking CSS -->
+    <!-- linking css -->
 
     <title>Document</title>
 </head>
 <body>
     
+    <!-- header section -->
+    <header>
+        <div class="header-divider">
+            <div class="header-texts">
+                <h2>Interactive</h2>
+                <h3>Genius Calculator</h3>
+            </div>
+            <div class="header-btn">
+                <button class="auxiliary-btn">Button</button>
+            </div>
+        </div>
+    </header>
+    <!-- header section -->
 
-    <!-- Linking JavaScript -->
+    
+
+    <!-- linking javascript -->
     <script src="./main.js"></script>
-    <!-- Linking JavaScript -->
+    <!-- linking javascript -->
 </body>
 </html>
