new font added, first card established

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- roboto font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700;900&display=swap" rel="stylesheet">
+    <!-- roboto font -->
+
     <!-- linking cSS -->
     <link rel="stylesheet" href="./styles.css">
     <!-- linking css -->
@@ -26,7 +32,42 @@
     </header>
     <!-- header section -->
 
-    
+    <!-- main section -->
+    <main>
+        <!-- first card -->
+        <section>
+            <div class="main-cards">
+                <div class="first">
+                    <div style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
+                        <img style="width: 10rem; margin-top: 1rem;" src="./assets/triangle.png" alt="triangle">
+                        <h2 style="margin-top: 1.5rem; color: #414141;">Triangle</h2>
+                        <p style="margin-top: 1rem;">Area (A): 0.5 × b × h</p>
+                        <div style="margin-top: 1.5rem; display: flex; align-items: center; gap: 0.5rem;">
+                            <input style="padding: 0.5rem; width: 3rem; border: 0; border-radius: 0.3rem;" type="text">
+                            <p>cm</p>
+                            <input style="padding: 0.5rem; width: 3rem; border: 0; border-radius: 0.3rem;" type="text">
+                            <p>cm</p>
+                            <span></span>
+                        </div>
+                        <button style="margin-top: 2rem; padding: 0.5rem; width: 12rem; height: 2.5rem; border: 0; border-radius: 0.4rem; cursor: pointer; background-color: #66b9e9; color: #fff;">Calculate Now</button>
+                    </div>
+
+                </div>
+                <div class="first">
+
+                </div>
+                <div class="first">
+
+                </div>
+            </div>
+
+            <div class="auxiliary-card">
+
+            </div>
+        </section>
+        <!-- first card -->
+    </main>
+    <!-- main section -->
 
     <!-- linking javascript -->
     <script src="./main.js"></script>
