second and third boxes are added

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
     <!-- main section -->
     <main>
-        <!-- first card -->
         <section>
             <div class="main-cards">
+                <!-- first card -->
                 <div class="first">
                     <div style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
                         <img style="width: 10rem; margin-top: 1rem;" src="./assets/triangle.png" alt="triangle">
@@ -53,12 +53,43 @@
                     </div>
 
                 </div>
-                <div class="first">
+                <!-- first card -->
 
+                <!-- second card -->
+                <div style="background-color: #FEFF5B;" class="first">
+                    <div style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
+                        <img style="width: 10rem; margin-top: 2.5rem;" src="./assets/rectangle.png" alt="triangle">
+                        <h2 style="margin-top: 1.5rem; color: #414141;">Rectangle</h2>
+                        <p style="margin-top: 1rem;">Area (A): w × l</p>
+                        <div style="margin-top: 1.5rem; display: flex; align-items: center; gap: 0.5rem;">
+                            <input style="padding: 0.5rem; width: 3rem; border: 0; border-radius: 0.3rem;" type="text">
+                            <p>cm</p>
+                            <input style="padding: 0.5rem; width: 3rem; border: 0; border-radius: 0.3rem;" type="text">
+                            <p>cm</p>
+                            <span></span>
+                        </div>
+                        <button style="margin-top: 2rem; padding: 0.5rem; width: 12rem; height: 2.5rem; border: 0; border-radius: 0.4rem; cursor: pointer; background-color: #66b9e9; color: #fff;">Calculate Now</button>
+                    </div>
                 </div>
-                <div class="first">
+                <!-- second card -->
 
+                <!-- third card -->
+                <div style="" class="first">
+                    <div style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
+                        <img style="width: 10rem; margin-top: 3.3rem;" src="./assets/parallelogram.png" alt="triangle">
+                        <h2 style="margin-top: 1.5rem; color: #414141;">Parallelogram</h2>
+                        <p style="margin-top: 1rem;">Area (A): b × h</p>
+                        <div style="margin-top: 1.5rem; display: flex; align-items: center; gap: 0.5rem;">
+                            <input style="padding: 0.5rem; width: 3rem; border: 0; border-radius: 0.3rem;" type="text">
+                            <p>cm</p>
+                            <input style="padding: 0.5rem; width: 3rem; border: 0; border-radius: 0.3rem;" type="text">
+                            <p>cm</p>
+                            <span></span>
+                        </div>
+                        <button style="margin-top: 2rem; padding: 0.5rem; width: 12rem; height: 2.5rem; border: 0; border-radius: 0.4rem; cursor: pointer; background-color: #66b9e9; color: #fff;">Calculate Now</button>
+                    </div>
                 </div>
+                <!-- third card -->
             </div>
 
             <div class="auxiliary-card">
