main logic established, showing result on screen will be aviliable in next commit

--- a/index.html
+++ b/index.html
@@ -43,15 +43,14 @@
                         <h2 style="margin-top: 1.5rem; color: #414141;">Triangle</h2>
                         <p style="margin-top: 1rem;">Area (A): 0.5 × b × h</p>
                         <div style="margin-top: 1.5rem; display: flex; align-items: center; gap: 0.5rem;">
-                            <input style="padding: 0.5rem; width: 3rem; border: 0; border-radius: 0.3rem;" type="text">
+                            <input first-tri-input id="first-input" style="padding: 0.5rem; width: 3rem; border: 0; border-radius: 0.3rem;" type="text">
                             <p>cm</p>
-                            <input style="padding: 0.5rem; width: 3rem; border: 0; border-radius: 0.3rem;" type="text">
+                            <input second-tri-input id="second-input" style="padding: 0.5rem; width: 3rem; border: 0; border-radius: 0.3rem;" type="text">
                             <p>cm</p>
                             <span></span>
                         </div>
-                        <button style="margin-top: 2rem; padding: 0.5rem; width: 12rem; height: 2.5rem; border: 0; border-radius: 0.4rem; cursor: pointer; background-color: #66b9e9; color: #fff;">Calculate Now</button>
+                        <button tri-btn style="margin-top: 2rem; padding: 0.5rem; width: 12rem; height: 2.5rem; border: 0; border-radius: 0.4rem; cursor: pointer; background-color: #66b9e9; color: #fff;">Calculate Now</button>
                     </div>
-
                 </div>
                 <!-- first card -->
 
@@ -62,31 +61,31 @@
                         <h2 style="margin-top: 1.5rem; color: #414141;">Rectangle</h2>
                         <p style="margin-top: 1rem;">Area (A): w × l</p>
                         <div style="margin-top: 1.5rem; display: flex; align-items: center; gap: 0.5rem;">
-                            <input style="padding: 0.5rem; width: 3rem; border: 0; border-radius: 0.3rem;" type="text">
+                            <input first-rec-input style="padding: 0.5rem; width: 3rem; border: 0; border-radius: 0.3rem;" type="text">
                             <p>cm</p>
-                            <input style="padding: 0.5rem; width: 3rem; border: 0; border-radius: 0.3rem;" type="text">
+                            <input second-rec-input id="second-input" style="padding: 0.5rem; width: 3rem; border: 0; border-radius: 0.3rem;" type="text">
                             <p>cm</p>
                             <span></span>
                         </div>
-                        <button style="margin-top: 2rem; padding: 0.5rem; width: 12rem; height: 2.5rem; border: 0; border-radius: 0.4rem; cursor: pointer; background-color: #66b9e9; color: #fff;">Calculate Now</button>
+                        <button rec-btn style="margin-top: 2rem; padding: 0.5rem; width: 12rem; height: 2.5rem; border: 0; border-radius: 0.4rem; cursor: pointer; background-color: #66b9e9; color: #fff;">Calculate Now</button>
                     </div>
                 </div>
                 <!-- second card -->
 
                 <!-- third card -->
-                <div style="" class="first">
+                <div style="background-color: #FFC1AC;" class="first">
                     <div style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
                         <img style="width: 10rem; margin-top: 3.3rem;" src="./assets/parallelogram.png" alt="triangle">
                         <h2 style="margin-top: 1.5rem; color: #414141;">Parallelogram</h2>
                         <p style="margin-top: 1rem;">Area (A): b × h</p>
                         <div style="margin-top: 1.5rem; display: flex; align-items: center; gap: 0.5rem;">
-                            <input style="padding: 0.5rem; width: 3rem; border: 0; border-radius: 0.3rem;" type="text">
+                            <input first-para-input style="padding: 0.5rem; width: 3rem; border: 0; border-radius: 0.3rem;" type="text">
                             <p>cm</p>
-                            <input style="padding: 0.5rem; width: 3rem; border: 0; border-radius: 0.3rem;" type="text">
+                            <input second-para-input style="padding: 0.5rem; width: 3rem; border: 0; border-radius: 0.3rem;" type="text">
                             <p>cm</p>
                             <span></span>
                         </div>
-                        <button style="margin-top: 2rem; padding: 0.5rem; width: 12rem; height: 2.5rem; border: 0; border-radius: 0.4rem; cursor: pointer; background-color: #66b9e9; color: #fff;">Calculate Now</button>
+                        <button para-btn style="margin-top: 2rem; padding: 0.5rem; width: 12rem; height: 2.5rem; border: 0; border-radius: 0.4rem; cursor: pointer; background-color: #66b9e9; color: #fff;">Calculate Now</button>
                     </div>
                 </div>
                 <!-- third card -->
